Fade effect update

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,9 @@
 
 }
 
+html,
 body {
+    position: relative;
     background-color: var(--bg-color);
     color: var(--text-primary);
     font-family: var(--font-primary);
